--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
-  "name": "salle-de-repos",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "name": "relaxation-lounge",
+    "private": true,
+    "version": "0.1.0",
+    "type": "module",
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "lint": "eslint .",
+      "preview": "vite preview"
+    },
+    "dependencies": {
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-router-dom": "^6.22.0",
+      "framer-motion": "^10.16.4",
+      "react-datepicker": "^4.20.0",
+      "react-icons": "^4.11.0",
+      "react-leaflet": "^4.2.1",
+      "leaflet": "^1.9.4"
+    },
+    "devDependencies": {
+      "@eslint/js": "^9.9.1",
+      "@types/react": "^18.3.5",
+      "@types/react-dom": "^18.3.0",
+      "@vitejs/plugin-react": "^4.3.1",
+      "eslint": "^9.9.1",
+      "eslint-plugin-react": "^7.35.0",
+      "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+      "eslint-plugin-react-refresh": "^0.4.11",
+      "globals": "^15.9.0",
+      "vite": "^5.4.2"
+    }
   }
-}
